[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocust = {path = "../rocust"}
tokio = {version="1.24.2", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-trait = "0.1.64"
reqwest = "0.11.14"