[package]
name = "rocust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JadKHaddad/Rocust"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocust_lib = { path = "../rocust_lib" }
rocust_macros = { path = "../rocust_macros" }