[package]
name = "rocust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = {version="1.24.2", features=["rt", "time", "macros", "sync"]}
tokio-util = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
prettytable-rs = "0.10.0"