[package]
name = "rocust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = {version="1.24.2", features=["rt", "time", "macros", "sync", "fs", "io-std", "io-util"]}
tokio-util = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
prettytable-rs = "0.10.0"
serde = {version="1.0.152", features = ["derive"]}
csv = "1.2.0"
axum = "0.6.7"
hyper = "0.14.24"
async-trait = "0.1.64"