[package]
name = "rocust_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
rocust_lib = { path = "../rocust_lib"}
syn = { version= "1.0.107", features = ["full", "extra-traits"] }
quote = "1.0.23"
proc-macro2 = "1.0.49"
